# contracts

./: .gitignore  Anchor.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/ci/: Dockerfile.anchor
.github/workflows/: build-ci-image.yml  build.yml  deploy.yml  freeze-core.yml  recover-keypair.yml
.keys/: squads-mainnet-state.json
docs/: README.md  SECURITY_AUDIT.md  agentic-commerce.md  architecture.md  idl-core.md  idl-treasury.md  protocol.md  whitepaper.md
docs/tempo/: protocol.md  simulate-deal.md
programs/syndaxia-core/: Cargo.toml
programs/syndaxia-core/src/: constants.rs  errors.rs  lib.rs
programs/syndaxia-core/src/instructions/: create_deal.rs  create_market.rs  dispute.rs  expire.rs  mod.rs  refund.rs  release.rs  release_milestone.rs  resolve_dispute.rs  transfer_beneficiary.rs
programs/syndaxia-core/src/state/: config.rs  deal.rs  mod.rs
solana/: Anchor.toml  Cargo.toml  package-lock.json  package.json
solana/programs/syndaxia-core/: Cargo.toml
solana/programs/syndaxia-core/src/: constants.rs  errors.rs  lib.rs
solana/programs/syndaxia-core/src/instructions/: create_deal.rs  dispute.rs  expire.rs  extend_dispute.rs  initialize.rs  mod.rs  refund.rs  release.rs  release_milestone.rs  resolve_dispute.rs  transfer_beneficiary.rs
solana/programs/syndaxia-core/src/libraries/: math.rs  mod.rs
solana/programs/syndaxia-core/src/state/: market.rs
solana/programs/syndaxia-treasury/: Cargo.toml
solana/programs/syndaxia-treasury/src/: errors.rs  lib.rs  state.rs
solana/tests/: syndaxia-core.ts  syndaxia-treasury.ts
solana/tests/fixtures/: syndaxia_treasury.json
solana/tests/helpers/: constants.ts  deal.ts  setup.ts
solana/tests/integration/: disputes.ts  expire-deal.ts  extend-dispute.ts  milestones.ts  security.ts  transfer-beneficiary.ts
tempo/: foundry.toml
tempo/script/: Deploy.s.sol  SimulateDeal.s.sol
tempo/src/: SyndaxiaEscrow.sol  SyndaxiaFactory.sol  SyndaxiaGovernance.sol
tests/: syndaxia-core.ts  syndaxia-treasury.ts
tests/helpers/: constants.ts  deal.ts  treasury.ts
tests/integration/: deal-lifecycle.ts  disputes.ts  extend-dispute.ts  milestones.ts  (+1 more)
(+1 files in other folders)
