[package]
name = "syndaxia-core"
version = "0.1.0"
description = "Syndaxia Protocol - Decentralized escrow for P2P & B2B commerce"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "syndaxia_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
